--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "expo": "^26.0.0",
-    "native-base": "https://github.com/GeekyAnts/NativeBase#v2.4.2-2",
+    "native-base": "2.6.0",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
     "vue-native-core": "0.0.5",
