--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "sdkVersion": "33.0.0",
+    "sdkVersion": "35.0.0",
     "icon": "./assets/nblogo.png",
     "slug": "kitchensinkvuenative",
     "loading": {
@@ -10,12 +10,27 @@
     "orientation": "portrait",
     "primaryColor": "#cccccc",
     "packagerOpts": {
-      "assetExts": ["ttf"]
+      "sourceExts": [
+        "vue",
+        "js",
+        "json",
+        "ts",
+        "tsx"
+      ],
+      "assetExts": [
+        "ttf"
+      ]
     },
     "androidStatusBarColor": "#334393",
     "androidStatusBar": {
       "barStyle": "light-content",
       "backgroundColor": "#334393"
-    }
+    },
+    "name": "kitchenSink-vue-native",
+    "version": "0.1.0",
+    "platforms": [
+      "android",
+      "ios"
+    ]
   }
 }
