--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "33.0.2",
+    "jest-expo": "^35.0.0",
     "react-test-renderer": "16.8.6",
-    "vue-native-scripts": "0.0.16"
+    "vue-native-scripts": "~0.1.4"
   },
   "main": "./node_modules/expo/AppEntry.js",
   "scripts": {
@@ -19,12 +19,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "33.0.7",
+    "expo": "^35.0.0",
     "native-base": "^2.13.8",
-    "react": "16.8.6",
-    "react-native": "0.59.10",
-    "vue-native-core": "0.0.8",
-    "vue-native-helper": "0.0.11",
-    "vue-native-router": "0.0.1-alpha.3"
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-paper": "^2.16.0",
+    "react-native-reanimated": "~1.2.0",
+    "vue-native-core": "~0.1.4",
+    "vue-native-helper": "~0.1.4",
+    "vue-native-router": "~0.1.1"
   }
 }
