--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-native-paper": "^2.16.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "vue-native-core": "~0.2.0",
     "vue-native-helper": "~0.2.0",
     "vue-native-router": "~0.2.0"
